# litscan-filtering

./: .gitignore  pyproject.toml
training/: fetch_data.py  llm_prefiltering.py
